--- a/LearningBoot/src/main/resources/application.properties
+++ b/LearningBoot/src/main/resources/application.properties
@@ -1,1 +1,7 @@
 spring.application.name=LearningBoot
+
+# Server port
+server.port=8080
+
+# Database configuration
+spring.datasource.url=jdbc:mysql://localhost:3306/
