--- a/LearningBoot/src/main/resources/application.properties
+++ b/LearningBoot/src/main/resources/application.properties
@@ -4,4 +4,6 @@ spring.application.name=LearningBoot
 server.port=8080
 
 # Database configuration
-spring.datasource.url=jdbc:mysql://localhost:3306/
+spring.datasource.url=jdbc:mysql://localhost:3306/mydblearnning
+spring.datasource.username=root
+spring.datasource.password=
