--- a/LearningBoot/pom.xml
+++ b/LearningBoot/pom.xml
@@ -52,6 +52,12 @@
 			<optional>true</optional>
 		</dependency>
 
+		<dependency>
+			<groupId>com.mysql</groupId>
+			<artifactId>mysql-connector-j</artifactId>
+			<version>8.4.0</version> <!-- หรือเวอร์ชันล่าสุดที่คุณใช้ -->
+		</dependency>
+
 
 
 	</dependencies>
