--- a/LearningBoot/src/main/resources/application.properties
+++ b/LearningBoot/src/main/resources/application.properties
@@ -4,6 +4,6 @@ spring.application.name=LearningBoot
 server.port=8080
 
 # Database configuration
-spring.datasource.url=jdbc:mysql://localhost:3306/mydblearnning
+spring.datasource.url=jdbc:mysql://localhost:3306/shop_learning
 spring.datasource.username=root
 spring.datasource.password=
