--- a/LearningBoot/src/main/resources/application.properties
+++ b/LearningBoot/src/main/resources/application.properties
@@ -7,3 +7,6 @@ server.port=8080
 spring.datasource.url=jdbc:mysql://localhost:3306/shop_learning
 spring.datasource.username=root
 spring.datasource.password=
+
+# Hibernate configuration
+spring.jpa.hibernate.ddl-auto=update
